# trunq-backend

./: .env.example  .gitignore  CLAUDE.md  main.py  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  test_data.py  test_ingestion.py  test_queries.py  test_query_system.py
app/api/: note.py  voice.py
app/core/: config.py  supabase_client.py
app/models/: response.py
app/repositories/: voice_repository.py
app/services/: query_service.py  supermemory_service.py  voice_service.py
app/utilities/: prompt.py
